# nevarono-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  cron-parser.yml  uncached-parser.yml
src/: __main__.py  api.py  bot.py  cleaner.py  config.py  exceptions.py  fetch.py  multipart.py  news.py  news_parser.py
