[project]
name = "nevarono-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]
external = ["WPS"]

[tool.mypy]
strict = true
warn_unreachable = true
packages = ["src"]

[tool.flake8]
select = ["WPS"]

[tool.ty.rules]
all = "error"
missing-override-decorator = "ignore"


[dependency-groups]
dev = [
    "flake8-pyproject>=1.2.4; python_version >= '3.14'",
    "wemake-python-styleguide>=1.6.2; python_version >= '3.14'",
    "ty; python_version >= '3.14'",
    "mypy>=1.4.1",
    "ruff>=0.15.21",
]
